# dirsig5b

./: .clang-format  CMakeLists.txt  build.sh
include/dirsig5b/: Lights.h  LocalSurface.h  LocalVolume.h  Medium.h  Node.h  Ray.h  Scattering.h  Sensor.h  Simulation.h  Simulator.h  SurfaceLocation.h  Transform.h  Vertex.h  World.h  common.h
lib/: CMakeLists.txt  LocalSurface.cc  LocalVolume.cc  PathTracer.cc  Scattering.cc  Simulation.cc  Simulator.cc  Vertex.cc  World.cc
reference/: LocalizeRay.cpp  LocalizeRay.h  NodeGenerator.cpp  NodeGenerator.h  PathPipeline.cpp  PathPipeline.h  PathProcessor.cpp  PathProcessor.h
src/: BistroWorld.cc  BistroWorld.h  CMakeLists.txt  Camera.cc  Camera.h  ForestWorld.cc  ForestWorld.h  FractalWorld.cc  FractalWorld.h  LumberyardBistro.cc  LumberyardBistro.h  PerspectiveCamera.cc  PerspectiveCamera.h  Sensor.cc  Sensor.h  StatueWorld.cc  StatueWorld.h  World.cc  World.h  main.cc
