find_package(assimp REQUIRED)
#add_executable(bistro Camera.cc BistroWorld.cc)
#add_executable(forest Camera.cc ForestWorld.cc)
add_executable(statue Camera.cc StatueWorld.cc)
#add_executable(fractal Camera.cc FractalWorld.cc)
#target_link_libraries(bistro PRIVATE dirsig5b Microcosm::stbi)
#target_link_libraries(forest PRIVATE dirsig5b Microcosm::stbi assimp::assimp)
target_link_libraries(statue PRIVATE dirsig5b Microcosm::stbi)
#target_link_libraries(fractal PRIVATE dirsig5b Microcosm::stbi)
